--- a/.github/workflows/main_secure-product-manager.yml
+++ b/.github/workflows/main_secure-product-manager.yml
@@ -20,7 +20,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean package
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
@@ -41,6 +41,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: java-app
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
