--- a/.github/workflows/main_secure-product-manager.yml
+++ b/.github/workflows/main_secure-product-manager.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -30,6 +34,11 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
     needs: build
 
     environment:
